<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_margin="1dip">

        <EditText
            android:id="@id/edit_temp0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:inputType="numberSigned"
            android:layout_marginEnd="70dip"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/logn_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@id/bt_temp0"
            android:layout_width="70dip"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/logn_in"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/talk_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_margin="1dip">

        <EditText
            android:id="@id/edit_temp1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:inputType="numberSigned"
            android:layout_marginEnd="70dip"
            android:background="@color/white"
            android:gravity="center"
            android:hint="@string/other_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@id/bt_temp1"
            android:layout_width="70dip"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/talk_to"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

    <ListView
        android:id="@id/list_temp0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:cacheColorHint="#00000000"
        android:childDivider="@color/gray"
        android:divider="@color/black"
        android:dividerHeight="0.5dip"
        android:drawSelectorOnTop="false"
        android:groupIndicator="@null" />

</LinearLayout>
